--- a/css/index.css
+++ b/css/index.css
@@ -191,6 +191,7 @@ footer nav {
     align-items: center;
     padding: 20px 2%;
     font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 footer nav a {
