--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,4 @@
+
 header {
     display: flex;
     margin: 0 auto;
@@ -28,7 +29,7 @@ header {
     align-items: center;
     width: 55vw;
     padding-bottom: 8px;
-    
+    font-family: Arial, Helvetica, sans-serif;
     
 }
 
@@ -45,4 +46,104 @@ a {
     display: flex;
     padding: 27px 0px;
     justify-content: center;
+}
+
+.container-about-page {
+    width: 800px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.container-about-page img {
+    width: 350px;
+    height: 250px;
+}
+
+h3 {
+    display: block;
+    width:200px;
+}
+
+.about {
+    display:block;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px dotted black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13pt;
+    width: 41.5vw;
+
+}
+
+.me {
+    width: 40vw;
+    display: flex;
+    padding: 15px;
+    font-size: .9em;
+    
+}
+
+.content {
+    display:flex;
+    padding-top: 30px;
+    width: 18vw;
+    flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+    border-bottom: 1px dotted black;
+    padding-bottom: 18px;
+}
+
+
+
+
+.content a {
+    padding:15px;
+    border-radius: 13px;
+    border: 1px solid black;
+    width:110px;
+    height: 10px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+
+
+.last {
+    display:block;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px dotted black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12pt;
+    width: 38vw;
+    padding: 15px;
+}
+
+
+
+
+
+footer {
+    width: 100%;
+    background: black;
+    margin: 0 ;
+}
+
+footer nav {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 2%;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+footer nav a {
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
 }
